--- a/_config.yml
+++ b/_config.yml
@@ -3,55 +3,5 @@ description: >-
   I am a Master of Information Technology student at the University of New South Wales.
   Previously, I completed degrees in Physics and Medical Science at the University of Sydney.
   This website is mostly home to a hodgepodge of code and documentation written for future reference.
-url: "http://tonyle.com" 
+url: "https://tonyle.com" 
 remote_theme: just-the-docs/just-the-docs
-
-# Enable or disable the site search
-# Supports true (default) or false
-search_enabled: true
-
-search:
-  # Split pages into sections that can be searched individually
-  # Supports 1 - 6, default: 2
-  heading_level: 2
-  # Maximum amount of previews per search result
-  # Default: 3
-  previews: 3
-  # Maximum amount of words to display before a matched word in the preview
-  # Default: 5
-  preview_words_before: 5
-  # Maximum amount of words to display after a matched word in the preview
-  # Default: 10
-  preview_words_after: 10
-  # Set the search token separator
-  # Default: /[\s\-/]+/
-  # Example: enable support for hyphenated search words
-  tokenizer_separator: /[\s/]+/
-  # Display the relative url in search results
-  # Supports true (default) or false
-  rel_url: true
-  # Enable or disable the search button that appears in the bottom right corner of every page
-  # Supports true or false (default)
-  button: true
-
-# Aux links for the upper right navigation
-aux_links:
-  "Resume":
-    - ""
-  "Email":
-    - "mailto: hello@tonyle.com"
-
-# Makes Aux links open in a new tab. Default is false
-aux_links_new_tab: false
-
-# Footer last edited timestamp
-last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
-last_edit_time_format: "%b %e %Y" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
-
-# Footer "Edit this page on GitHub" link text
-gh_edit_link: true # show or hide edit this page link
-gh_edit_link_text: "Edit this page on GitHub"
-gh_edit_repository: "https://github.com/tfle/tfle.github.io" # the github URL for your repo
-gh_edit_branch: "main" # the branch that your docs is served from
-# gh_edit_source: docs # the source that your files originate from
-gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
