--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,9 @@ description: >-
   This website is mostly home to a hodgepodge of code and documentation written for future reference.
 url: "https://tonyle.com" 
 remote_theme: just-the-docs/just-the-docs@v0.4.0.rc3
+
+# Aux links for the upper right navigation
+aux_links:
+  "Tony Le on GitHub":
+    - "https://github.com/tfle/"
+
