Replace upper right link with email

--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ remote_theme: just-the-docs/just-the-docs@v0.4.0.rc3
 
 # Upper right corner of every page
 aux_links:
-  "Tony Le on GitHub":
-    - "https://github.com/tfle/"
+  "contact@tonyle.com":
+    - "mailto:contact@tonyle.com"
 # Bottom right corner of every page
 search:
   button: true
