Add footer with edit link

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Tony Le
-description: "This is the website you go to if you want to know who Tony Le is." 
+description: This is the website you go to if you want to know who Tony Le is.
 url: "https://tonyle.com" 
 remote_theme: just-the-docs/just-the-docs@v0.4.0.rc3
 
@@ -10,6 +10,13 @@ aux_links:
 # Bottom right corner of every page
 search:
   button: true
+
+# Footer "Edit this page on GitHub" link text
+gh_edit_link: true
+gh_edit_link_text: "Edit this page on GitHub"
+gh_edit_repository: "https://github.com/tfle/personal-website"
+gh_edit_branch: "main"
+gh_edit_view_mode: "edit" # "tree" or "edit" to jump into the editor immediately
 
 callouts_level: quiet # or loud
 callouts:
