--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ search:
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true
 gh_edit_link_text: "Edit this page on GitHub"
-gh_edit_repository: "https://github.com/tfle/personal-website"
+gh_edit_repository: "https://github.com/tfle/tfle.github.io"
 gh_edit_branch: "main"
 gh_edit_view_mode: "edit" # "tree" or "edit" to jump into the editor immediately
 
