--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ search:
   button: true
 
 # Footer "Edit this page on GitHub" link text
-gh_edit_link: false
+gh_edit_link: true
 gh_edit_link_text: "Edit this page on GitHub"
 gh_edit_repository: "https://github.com/tfle/tfle.github.io"
 gh_edit_branch: "main"
@@ -44,5 +44,5 @@ callouts:
     color: red
 
 # Back to top link
-back_to_top: false
+back_to_top: true
 back_to_top_text: "Back to top"
