--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,23 @@
+# Site settings
 title: Tony Le
-description: This is the website you go to if you want to know who Tony Le is.
+description: This is the website you go to if you want to know who Tony Le is
 url: "https://tonyle.com" 
+
+# Theming
 remote_theme: just-the-docs/just-the-docs@v0.4.0.rc3
+search:
+  button: true
+aux_links:
+  "contact@tonyle.com":
+    - "mailto:contact@tonyle.com"
+back_to_top: true
+back_to_top_text: "Back to top"
+footer_content: "Tony Le &copy; 2022 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>"
+gh_edit_link: false
+gh_edit_link_text: "Edit this page on GitHub"
+gh_edit_repository: "https://github.com/tfle/tfle.github.io"
+gh_edit_branch: "main"
+gh_edit_view_mode: "edit" # "tree" or "edit" to jump into the editor immediately
 
 # Enable Mermaid.js
 mermaid:
@@ -9,22 +25,7 @@ mermaid:
   # Pick an available version from https://cdn.jsdelivr.net/npm/mermaid/
   version: "9.2.0"
 
-# Upper right corner of every page
-aux_links:
-  "contact@tonyle.com":
-    - "mailto:contact@tonyle.com"
-
-# Bottom right corner of every page
-search:
-  button: true
-
-# Footer "Edit this page on GitHub" link text
-gh_edit_link: true
-gh_edit_link_text: "Edit this page on GitHub"
-gh_edit_repository: "https://github.com/tfle/tfle.github.io"
-gh_edit_branch: "main"
-gh_edit_view_mode: "edit" # "tree" or "edit" to jump into the editor immediately
-
+# Customise callouts
 callouts_level: quiet # or loud
 callouts:
   selected-user:
@@ -42,7 +43,3 @@ callouts:
   warning:
     title: Warning
     color: red
-
-# Back to top link
-back_to_top: true
-back_to_top_text: "Back to top"
