--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 url: https://tonyle.com # the base hostname & protocol for your site, e.g. http://example.com
 # custom_variable:
 
+# Build settings
 theme: just-the-docs
-
 # plugins:
 #  - jekyll-feed
 
