Enable code copy button

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ theme: just-the-docs
 search:
   button: true
 
+enable_copy_code_button: true
+
 aux_links:
   "contact@tonyle.com":
     - "mailto:contact@tonyle.com"
